[tool.poetry]
name = "your_package_name"
version = "0.1.0"
description = "python template including useful tools for python development"
authors = ["enricovmarquezz@gmail.com"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
ruff = "^0.1.14"
pytest = "^8.0.0"
pre-commit = "^3.7.0"
mypy = "^1.10.0"
commitizen = "^4.8.2"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version = "0.1.0"
